--- a/test.html
+++ b/test.html
@@ -1,24 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>HTML5 Basic Page</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>hello</title>
   </head>
-  <body>
-    <!-- 전체를 감싸는 태그 -->
-    <div id="page-wrapper">
-      <!-- 헤더 -->
-      <header id="main-header"></header>
-      <!-- 내비게이션 -->
-      <nav id="main-navigation"></nav>
-      <!-- 본문 -->
-      <div id="content">
-        <!-- 본문좌측영역 -->
-        <section id="main-section"></section>
-        <!-- 본문우측영역 -->
-        <aside id="main-aside"></aside>
-      </div>
-      <!-- 푸터 -->
-      <footer id="main-footer"></footer>
-    </div>
-  </body>
+  <body></body>
 </html>
